<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="application_name" msgid="8424725141379931883">Ant Launcher</string>
    <string name="app_name">AntLauncher</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="folder_name">Folder</string>
    
    <!-- 底部编辑视图  -->
    <string name="launcher_edit_add">Add</string>
    <string name="launcher_edit_individal">Customize</string>
    <string name="launcher_edit_add_system_widget">System widget</string>
    <string name="launcher_appslist_appstore_text">去应用市场看更多</string>
    <string name="action_settings">Settings</string>
    
    <!-- 菜单 -->
    <string name="menu_add">飞骐2添加小部件</string>
	<string name="menu_theme">飞骐美化手机</string>
	<string name="menu_effect">特效选择</string>
	<string name="menu_sys_setting">系统设置</string>
	<string name="menu_custom_setting">桌面设置</string>
	<string name="menu_share">分享</string>
	
	<!-- 快捷 -->
	<string name="dockbar_dock_drawer">全部应用</string>
    <string name="dockbar_dock_search">Search</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- Categories -->
    <string name="cat_other">Other</string>
    <string name="cat_game">Game</string>
    <string name="cat_book">Book</string>
    <string name="cat_bussiness">Bussiness</string>
    <string name="cat_social"><![CDATA[Social & Communication]]></string>
    <string name="cat_education">Education</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_finance">Finance</string>
    <string name="cat_health"><![CDATA[Health & Fitness]]></string>
    <string name="cat_life">Lifestyle</string>
    <string name="cat_av"><![CDATA[Media & Video]]></string>
    <string name="cat_newsreading"><![CDATA[News & Magazines]]></string>
    <string name="cat_personalization">Personalization</string>
    <string name="cat_photography">Photography</string>
    <string name="cat_tools">Tools</string>
    <string name="cat_shopping">Shopping</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_transportation">Transportation</string>
    <string name="cat_travelnlocal"><![CDATA[Travel & Local]]></string>

    <string name="folder_system">System</string>
    <string name="folder_tool">Tools</string>
    <string name="folder_social"><![CDATA[Social & Communication]]></string>
    <string name="folder_game">Game</string>
    <string name="folder_news"><![CDATA[News & Reading]]></string>
    <string name="folder_life">Life</string>
    <string name="folder_shopping">Shopping</string>
    <string name="folder_av"><![CDATA[Audio & Video]]></string>
    <string name="folder_other">Other</string>
    <string name="cat_system">System</string>
    <string name="cat_cloud">Cloud</string>

    <string name="notify_priority">notify_priority</string>
    <string name="title_activity_setting">设置</string>
    <string name="xiaomi_attention">
        <![CDATA[小米系统用户请进入系统应用:安全中心->授权管理->自启动应用管理 后允许『贝壳单词』自启动，否则无法自启动]]></string>
    <string name="toast_close">当前为关闭。\n开启后会在你使用其他 APP
        的时，定时弹出可爱的小『吐司』，不会妨碍你的触摸和点击事件，打扰性非常低，但却能很高效地无压力复习单词。
    </string>
    <string name="toast_open">当前为开启。\n开启后会在你使用其他 APP
        的时，定时弹出可爱的小『吐司』，不会妨碍你的触摸和点击事件，打扰性非常低，但却能很高效地无压力复习单词。
    </string>

    <!-- for settings -->
    <string name="ant_set_name">Buttons</string>
    <string name="ant_set_wifi">WLAN</string>
    <string name="ant_set_3g">Mobile data</string>
    <string name="ant_set_hot">Hotspot</string>
    <string name="ant_set_loc">Lock screen</string>
    <string name="ant_set_fly">Airplane mode</string>
    <string name="ant_set_clo">Clock</string>
    <string name="ant_set_gps">GPS</string>
    <string name="ant_set_vab">Vibration</string>
    <string name="ant_set_vab1">Slient</string>
    <string name="ant_set_vab2">Sound</string>
    <string name="ant_set_blu">Bluetooth</string>
    <string name="ant_set_xuan">A-rotate</string>
    <string name="ant_set_l2">Light</string>
    <string name="ant_set_l21">Half-L</string>
    <string name="ant_set_l22">Max-L</string>
    <string name="ant_set_la">A-mode</string>
    <string name="ant_set_set">Settings</string>
    <string name="ant_set_lig">Flashlight</string>
    <string name="ant_set_cam">Camera</string>
    <string name="ant_set_cal">Calculator</string>
    <string name="ant_set_close">Click to Close</string>
    <string name="ant_set_click">Click to open QuickButtons</string>
   <string name="ant_set_noblue">Bluetooth Not Available !</string>
    <string name="ant_set_openhot">Opening Hot Name:HotWifi,Password:(null)</string>
    <string name="ant_set_notif">QuickButtons is here</string>
    <string name="ant_set_notiflock">Activate to support the function of LockScreen</string>
    
</resources>